--- a/index.html
+++ b/index.html
@@ -89,18 +89,13 @@ margin:auto;>
 <tbody>
 <tr>
 <td><img  weigh='420'; height='300' src="https://lh3.google.com/pw/AM-JKLU9X1GW8ckFbHHzwdJQl5xb-M2Skx1iz5aSRBuEpmG7Qbvw9EQ7aeXpV9poI6kz1BXTUGISoxZnexRTYx_yHkhDc2jSUA=w626-h417-no?authuser=0"></td><td><img  weigh='420'; height='300' src="https://lh3.google.com/pw/AM-JKLWezx1YJUGPbXOSJ_OD1ARdVvkMWUq1oVVPeFZlroA-HxjEQUMUy1sXJ9bmoHA7b-kccv41hosBj99BR6VQKubGeh8I8A=w1154-h770-no?authuser=0"></td>
-<br>
-<td><img  weigh='420'; height='300' src="https://lh3.google.com/pw/AM-JKLWrTdEuSyLvRxxPPqwCV0iBsPazeRHfPcd-_qZ-rGiTPp5mQGJZueXnEpqjybEJoRAWyjtJs6PDE1m6w4v0PBj2Rd9QEQ=w1131-h770-no?authuser=0"></td></td><td><img  weigh='420'; height='300' src="https://lh3.google.com/pw/AM-JKLVjJBJt70S8DyRze-K4LJSFJGqv_a_uACka5_CdBsVDw3IDLbiza5Wdfm7Iz0uwR2Q2Ybao33ZHm--ScuBhAB0c3ENA2A=w500-h333-no?authuser=0">
-</tr>
 <tr>
-<td><font size="4"><p>從「2017年勞工影展：過勞時代」了解勞工議題(圖片取自:Freepik)</p></font></td><td><font size="4"><p>同婚合法愛滋擴散？不安全性行為才是主因</p><font></td><td><font size="4"><p>美國同志不安全性行為HIV地區分布</p></font></td><td><font size="4"><p>COVID-19 五大疫苗比較(圖片取自:Pixabay)</p></font></td>
+<td><font size="4"><p>從「2017年勞工影展：過勞時代」了解勞工議題(圖片取自:Freepik)</p></font></td><td><font size="4"><p>同婚合法愛滋擴散？不安全性行為才是主因</p><font></td>
+    <br>
+    <td><img  weigh='420'; height='300' src="https://lh3.google.com/pw/AM-JKLWrTdEuSyLvRxxPPqwCV0iBsPazeRHfPcd-_qZ-rGiTPp5mQGJZueXnEpqjybEJoRAWyjtJs6PDE1m6w4v0PBj2Rd9QEQ=w1131-h770-no?authuser=0"></td></td><td><img  weigh='420'; height='300' src="https://lh3.google.com/pw/AM-JKLVjJBJt70S8DyRze-K4LJSFJGqv_a_uACka5_CdBsVDw3IDLbiza5Wdfm7Iz0uwR2Q2Ybao33ZHm--ScuBhAB0c3ENA2A=w500-h333-no?authuser=0">
 </tr>
-<tr>
-<td>我手中第一幅似顏繪，就獻給摯愛吧</td><td>畫下我心中最可愛的寶寶</td><td>趁暑假疫情剛減緩之際，出門踏青散散心</td><td>新聞系大三小世(地)界(獄)記者，總要有張看起來很專業照片吧</td>
-</tr>
-</tbody>
-</table>
-<br>
+<td><font size="4"><p>美國同志不安全性行為HIV地區分布</p></font></td><td><font size="4"><p>COVID-19 五大疫苗比較(圖片取自:Pixabay)</p></font></td>
+
                             <hr width="100%" color="#FFFFF4" size="3" align="center">
                             <br>
 
